--- a/web.xml
+++ b/web.xml
@@ -1,23 +1,33 @@
-<web-app ... version="4.0">
-  <servlet>
-    <servlet-name>HospitalServlet</servlet-name>
-    <servlet-class>hospital.HospitalServlet</servlet-class>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>HospitalServlet</servlet-name>
-    <url-pattern>/hospital</url-pattern>
-  </servlet-mapping>
+<web-app xmlns="http://xmlns.jcp.org/xml/ns/javaee"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee
+                             http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd"
+         version="4.0">
 
-  <servlet>
-    <servlet-name>DoctorServlet</servlet-name>
-    <servlet-class>hospital.DoctorServlet</servlet-class>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>DoctorServlet</servlet-name>
-    <url-pattern>/doctor</url-pattern>
-  </servlet-mapping>
+    <!-- Handles user registration and listing -->
+    <servlet>
+        <servlet-name>HospitalServlet</servlet-name>
+        <servlet-class>hospital.HospitalServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>HospitalServlet</servlet-name>
+        <url-pattern>/hospital</url-pattern>
+    </servlet-mapping>
 
-  <welcome-file-list>
-    <welcome-file>addRecord.html</welcome-file>
-  </welcome-file-list>
+    <!-- Handles doctor registration and listing -->
+    <servlet>
+        <servlet-name>DoctorServlet</servlet-name>
+        <servlet-class>hospital.DoctorServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>DoctorServlet</servlet-name>
+        <url-pattern>/doctor</url-pattern>
+    </servlet-mapping>
+
+    <!-- Default page -->
+    <welcome-file-list>
+        <welcome-file>addRecord.html</welcome-file>
+    </welcome-file-list>
 </web-app>
+
+
